resolve layout bug

--- a/src/components/Employee/EmployeeList/EmployeeList.module.scss
+++ b/src/components/Employee/EmployeeList/EmployeeList.module.scss
@@ -3,7 +3,5 @@
   justify-content: center;
   align-items: center;
   border: 1px solid black;
-  padding-top: 15%;
-  margin-left: 20%;
-  margin-right: 20%;
+  width: 100%;
 }
