--- a/src/components/Layout/Main/Main.module.scss
+++ b/src/components/Layout/Main/Main.module.scss
@@ -2,5 +2,5 @@
 
 .main {
   background-color: $secondary-color;
-  min-height: 100%;
+  height: 100%;
 }
